fixing layout to look better on mobile

--- a/client/src/css/grayscale.css
+++ b/client/src/css/grayscale.css
@@ -252,14 +252,14 @@ a:focus {
     padding-top: 50px;
 }
 
-.app {
-    display: table;
-    width: 100%;
-    height: 500px;
-    padding: 100px 0;
-    text-align: center;
-    padding-bottom: 200px;
-}
+/*.app {*/
+    /*display: table;*/
+    /*width: 50%;*/
+    /*height: 500px;*/
+    /*padding: 10em 0;*/
+    /*text-align: center;*/
+    /*padding-bottom: 20em;*/
+/*}*/
 
 .results-section {
     width: 100%;
@@ -278,7 +278,8 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 50px;
+        padding-bottom: 100px;
     }
 
     .results-section {
@@ -369,9 +370,9 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-.username {
-    padding-left: 30%;
-}
+/*.username {*/
+    /*padding-left: 30%;*/
+/*}*/
 
 .happy {
     color: #79BD9A;
